# ViaTrade

./: .gitignore  main.py  pyproject.toml
application/base/: repository.py
application/dto/: auth_dto.py
application/interface/: iauth_service.py  icache.py  ipassword_hasher.py  itoken_helper.py
domain/: entity.py  exceptions.py  model.py
domain/entity/: __init__.py  trade.py  trade_code.py  trade_strategy.py  trade_type.py  user.py  user_trade_code.py  user_trade_strategy.py
domain/models/: logic.py  system.py
infrastructure/cache/: redis.py
infrastructure/config/: app.py  database.py  redis.py  setup_logger.py
infrastructure/facade/: repository.py
infrastructure/interface/: itoken_manager.py
infrastructure/repositories/: trade.py  trade_type.py  tradecode.py  tradestrategy.py  user.py
infrastructure/security/: jwt_token_helper.py  password_hasher.py
infrastructure/services/: export_service.py  login_service.py  logout_service.py  refresh_token_service.py  register_service.py
infrastructure/services/auth/: login_service.py  logout_service.py  refresh_token_service.py  register_service.py
infrastructure/services/background/: background_service.py  service_manager.py
infrastructure/services/moex/: __init__.py  futures_service.py  moex_api.py  moex_client.py  moex_data_service.py  moex_facade.py  moex_logic.py  stocks_service.py
infrastructure/services/trade/: fetch_service.py
migrations/: env.py
migrations/versions/: bccc73078910_init_database.py  ed4d033e4966_init_models.py
server/: dependencies.py  main.py
server/routes/: auth.py
